# ck3-tiger

./: .gitignore  CODING.md  CONTRIBUTORS.md  Cargo.toml  IDEAS.md  Makefile  README.md  TODO.md  annotations.md  bacon.toml  ck3-tiger.conf  deny.toml  filter.md  git-hooks-pre-commit  guiproperties.txt  hoi4-tiger.conf  imperator-tiger.conf  mod-validator.info  munch_data_types.py  sort-log.py  test.txt  update-versions.sh  vic3-tiger.conf
.github/workflows/: doc.yml  releases.yml  test-windows.yml  test.yml
benches/: criterion.rs
capnp/: fileheader.capnp  pdxfile.capnp
ck3-tiger/: Cargo.toml
ck3-tiger/benches/: criterion.rs
ck3-tiger/src/: lib.rs  main.rs
derive/: Cargo.toml
derive/src/: lib.rs  verify.rs
hoi4-tiger/: Cargo.toml
hoi4-tiger/src/: lib.rs
imperator-tiger/: Cargo.toml
imperator-tiger/src/: lib.rs  main.rs
mod-test-vanilla/: ck3-tiger.conf  descriptor.mod  hoi4-tiger.conf  vic3-tiger.conf
mod-test-vanilla/.metadata/: metadata.json
src/: block.rs  characters.rs  config_load.rs  context.rs  datatype.rs  date.rs  db.rs  dds.rs  decisions.rs  desc.rs  dynasties.rs  effect.rs  effect_validation.rs  error.rs  errorkey.rs  errors.rs  events.rs  everything.rs  fileset.rs  game.rs  gameconcepts.rs  gamedir.rs  helpers.rs  houses.rs  interactions.rs  item.rs  lib.rs  localization.rs  lowercase.rs  macrocache.rs  macros.rs  main.rs  mod_metadata.rs  modfile.rs  modif.rs  on_action.rs  output_style.rs  pathtable.rs  pdxfile.rs  prov_history.rs  (+18 more)
src/block/: blockitem.rs  bv.rs  comparator.rs  field.rs  serializer.rs  validator.rs
src/capnp/: fileheader_capnp.rs  mod.rs  pdxfile_capnp.rs
src/ck3/: effect_validation.rs  events.rs  item.rs  mod.rs  modif.rs  scopes.rs  validate.rs
src/ck3/data/: accessory.rs  accolades.rs  activities.rs  ai_war_stances.rs  amenities.rs  artifacts.rs  assets.rs  bookmarks.rs  buildings.rs  casusbelli.rs  character_templates.rs  characters.rs  climate.rs  coa.rs  coadesigner.rs  combat.rs  combat_effects.rs  council.rs  court_scene.rs  court_type.rs  courtier_guest_mgmt.rs  courtpos.rs  culture_history.rs  cultures.rs  data_binding.rs  deathreasons.rs  decisions.rs  diarchies.rs  difficulty.rs  dna.rs  doctrines.rs  domiciles.rs  dynasties.rs  dynasty_legacies.rs  election.rs  environment.rs  epidemics.rs  ethnicity.rs  event_effect_2d.rs  event_themes.rs  (+77 more)
src/ck3/tables/: datafunctions.rs  effects.rs  iterators.rs  localization.rs  misc.rs  mod.rs  modifs.rs  on_action.rs  rules.rs  sounds.rs  targets.rs  triggers.rs
src/data/: accessory.rs  accolades.rs  achievements.rs  activities.rs  amenities.rs  artifacts.rs  assets.rs  bookmarks.rs  buildings.rs  casusbelli.rs  character_templates.rs  characters.rs  coa.rs  coadesigner.rs  colors.rs  combat.rs  council.rs  court_scene.rs  court_type.rs  courtpos.rs  courtpos_categories.rs  culture_history.rs  cultures.rs  customloca.rs  data_binding.rs  deathreasons.rs  decisions.rs  defines.rs  diarchies.rs  difficulty.rs  dlc.rs  dna.rs  doctrines.rs  dynasties.rs  dynasty_legacies.rs  effect_localization.rs  election.rs  environment.rs  ethnicity.rs  event_themes.rs  (+71 more)
src/data/localization/: parse.rs
src/gui/: block.rs  builtins.rs  categories.rs  mod.rs  properties.rs  validate.rs
src/hoi4/: effect_validation.rs  events.rs  mod.rs  modif.rs  scopes.rs  validate.rs  variables.rs
src/hoi4/data/: abilities.rs  acclimatation.rs  aces.rs  buildings.rs  characters.rs  countries.rs  country_history.rs  country_leader.rs  decisions.rs  dynamic.rs  equipment.rs  events.rs  focus.rs  gfx.rs  ideas.rs  ideologies.rs  map.rs  mio.rs  mod.rs  modifiers.rs  music.rs  names.rs  operations.rs  power_balance.rs  provinces.rs  resources.rs  scientist.rs  script_enums.rs  scripted_enums.rs  scripted_guis.rs  scripted_localisation.rs  sounds.rs  special_projects.rs  states.rs  subunits.rs  tactics.rs  technology.rs  terrain.rs  unit_history.rs  unit_leader.rs
src/hoi4/tables/: datafunctions.rs  effects.rs  iterators.rs  localization.rs  misc.rs  mod.rs  modifs.rs  on_action.rs  sounds.rs  targets.rs  triggers.rs  variables.rs
src/imperator/: effect_validation.rs  events.rs  item.rs  mod.rs  modif.rs  scopes.rs
src/imperator/data/: ai_plan_goals.rs  ambitions.rs  ambitions.rs.bak  areas.rs  buildings.rs  character_interactions.rs  combat_tactics.rs  culture.rs  death_reason.rs  decisions.rs  decisions.rs.bak  deity.rs  deity.rs.bak  deity_categories.rs  deity_categories.rs.bak  diplomatic_stances.rs  economic_policies.rs  event_pictures.rs  event_themes.rs  events.rs  goods.rs  governments.rs  governor_policies.rs  graphical_culture_types.rs  great_work.rs  heritages.rs  ideas.rs  ideas.rs.bak  inventions.rs  laws.rs  legion_distinctions.rs  legion_distinctions.rs.bak  levy_templates.rs  loyalty.rs  military_traditions.rs  missions.rs  mod.rs  modifiers.rs  offices.rs  opinions.rs  (+19 more)
src/imperator/tables/: datafunctions.rs  effects.rs  iterators.rs  localization.rs  misc.rs  mod.rs  modifs.rs  on_action.rs  sounds.rs  targets.rs  triggers.rs
src/localization/: parse.rs
src/parse/: cache.rs  cob.rs  csv.rs  ignore.rs  json.rs  localization.rs  mod.rs  pdxfile.rs  suppress.rs
src/parse/ignore/: parser.lalrpop
src/parse/pdxfile/: lexer.rs  memory.rs  parser.lalrpop  (+1 more)
src/pdxfile/: parse.rs
src/provinces/: parse.rs
src/report/: builder.rs  error_key.rs  error_loc.rs  errorkey.rs  errors.rs  filter.rs  mod.rs  output_style.rs  report_struct.rs  suppress.rs  writer.rs  writer_json.rs
src/scope/: validator.rs
src/tables/: datafunctions.rs  effects.rs  mod.rs  modifs.rs  triggers.rs
src/validator/: value_validator.rs
src/vic3/: effect_validation.rs  events.rs  item.rs  mod.rs  modif.rs  scopes.rs  validate.rs
tests/: test.rs
tiger-bin-shared/: Cargo.toml
tiger-bin-shared/src/: auto.rs  binary.rs  gamedir.rs  lib.rs  tiger.rs  update.rs
tiger-gui/: Cargo.toml
tiger-gui/src/: game.rs  lib.rs  main.rs  message.rs  mods.rs  reports.rs  ui.rs
utils/: Cargo.toml
vic3-tiger/: Cargo.toml
vic3-tiger/benches/: criterion.rs
vic3-tiger/src/: lib.rs  main.rs
(+123 files in other folders)
