[workspace]

members = [
    "ck3-tiger",
    "vic3-tiger",
    "imperator-tiger",
    "tiger-bin-shared",
    "utils",
    ".",
]

[package]
name = "tiger-lib"
version = "0.9.5"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Library used by the tools ck3-tiger, vic3-tiger, and imperator-tiger. This library holds the bulk of the code for them. It can be built either for ck3-tiger with the feature ck3, or for vic3-tiger with the feature vic3, or for imperator-tiger with the feature imperator, but not both at the same time."
homepage = "https://github.com/amtep/ck3-tiger"
repository = "https://github.com/amtep/ck3-tiger"
readme = "README.md"
rust-version = "1.70"

[features]
default = ["ck3"]
ck3 = []
vic3 = []
imperator = []

[dependencies]
ansiterm = "0.12.2"
anyhow = "1"
as-any = "0.3.0"
atomic_enum = "0.3.0"
bimap = "0.6.3"
bitflags = "2.3.3"
bitvec = "1.0"
bumpalo = "~3.14"
encoding_rs = "0.8.32"
home = "0.5"
image = { version = "0.25", features = [
    "dds",
    "png",
], default-features = false }
inventory = "0.3.11"
lazy_static = "1"
once_cell = "1.18.0"
phf = { version = "0.11", features = ["macros"] }
png = "0.17.6"
rayon = "1.7.0"
serde = { version = "1.0.184", features = ["derive"] }
serde_json = "1.0.104"
strum = { version = "0.26", features = ["phf"] }
strum_macros = "0.26"
thiserror = "1"
unicode-width = "0.1.9"
walkdir = "2"
ahash = { version = "0.8", features = [
    "std",
    "compile-time-rng",
], default-features = false }

[profile.bench]
debug = true
