[workspace]

members = [
    "ck3-tiger",
    "vic3-tiger",
    "imperator-tiger",
    "tiger-bin-shared",
    "utils",
    ".",
]

[package]
name = "tiger-lib"
version = "0.9.6"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Library used by the tools ck3-tiger, vic3-tiger, and imperator-tiger. This library holds the bulk of the code for them. It can be built either for ck3-tiger with the feature ck3, or for vic3-tiger with the feature vic3, or for imperator-tiger with the feature imperator, but not both at the same time."
homepage = "https://github.com/amtep/ck3-tiger"
repository = "https://github.com/amtep/ck3-tiger"
readme = "README.md"
rust-version = "1.70"

[features]
default = ["ck3"]
ck3 = []
vic3 = []
imperator = []

[dependencies]
ansiterm = "0.12.2"
anyhow = "1"
as-any = "0.3.0"
atomic_enum = "0.3.0"
bimap = "0.6.3"
bitflags = "2.3.3"
bitvec = "1.0"
bumpalo = "~3.14"
encoding_rs = "0.8.32"
image = { version = "0.25", features = [
    "dds",
    "png",
], default-features = false }
inventory = "0.3.11"
lazy_static = "1"
once_cell = "1.18.0"
phf = { version = "0.11", features = ["macros"] }
png = "0.17.6"
rayon = "1.7.0"
serde = { version = "1.0.184", features = ["derive"] }
serde_json = "1.0.104"
strum = { version = "0.26", features = ["phf"] }
strum_macros = "0.26"
thiserror = "1"
unicode-width = "0.1.9"
walkdir = "2"
ahash = { version = "0.8", features = [
    "std",
    "compile-time-rng",
], default-features = false }

[profile.bench]
debug = true

# Specifying the lints in the Cargo.toml is a new feature in Rust 1.74,
# but it won't do harm on older Rust versions.
[workspace.lints.clippy]
# Turn on pedantic and then disable some of the pedantic lints
pedantic = { level = "warn", priority = -1 }
struct_excessive_bools = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
enum_glob_use = "allow"
wildcard_imports = "allow"

# opinion differences with clippy
too_many_lines = "allow"
blocks_in_conditions = "allow"

# a selection of warnings from clippy's restricted set
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
integer_division = "warn"
lossy_float_literal = "warn"
mixed_read_write_in_expression = "warn"
mutex_atomic = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_add = "warn"
string_to_string = "warn"
todo = "warn"

[workspace.lints.rust]
missing_debug_implementations = "warn"
future_incompatible = "warn"
missing_copy_implementations = "warn"
noop_method_call = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"

[lints]
workspace = true
