[workspace]

members = [
    "ck3-tiger",
    "vic3-tiger",
    "imperator-tiger",
    "hoi4-tiger",
    "tiger-bin-shared",
    "utils",
    ".",
]

[package]
name = "tiger-lib"
version = "1.6.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Library used by the tools ck3-tiger, vic3-tiger, and imperator-tiger. This library holds the bulk of the code for them. It can be built either for ck3-tiger with the feature ck3, or for vic3-tiger with the feature vic3, or for imperator-tiger with the feature imperator, but not both at the same time."
homepage = "https://github.com/amtep/ck3-tiger"
repository = "https://github.com/amtep/ck3-tiger"
readme = "README.md"
rust-version = "1.80"

[features]
default = ["ck3"]
ck3 = ["jomini"]
vic3 = ["jomini"]
imperator = ["jomini"]
jomini = ["dep:png"]
hoi4 = ["image/bmp", "dep:tinybmp"]

[build-dependencies]
lalrpop = "0.22.0"

[dependencies]
ansiterm = "0.12.2"
anyhow = "1"
as-any = "0.3.0"
atomic_enum = "0.3.0"
bimap = "0.6.3"
bitflags = "2.8"
bitvec = "1.0"
bumpalo = "3.16"
encoding_rs = "0.8.32"
image = { version = "0.25", features = [
    "dds",
    "png",
], default-features = false }
inventory = "0.3.11"
lalrpop-util = { version = "0.22.0", features = ["unicode"] }
phf = { version = "0.11", features = ["macros"] }
png = { version = "0.17.6", optional = true }
rayon = "1.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["phf"] }
strum_macros = "0.27"
thiserror = "2"
tinybmp = { version = "0.6", optional = true }
unicode-width = "0.2"
walkdir = "2"
ahash = { version = "0.8", features = [
    "std",
    "compile-time-rng",
], default-features = false }
murmur3 = "0.5.2"

[profile.bench]
debug = true

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1

# Specifying the lints in the Cargo.toml is a new feature in Rust 1.74,
# but it won't do harm on older Rust versions.
[workspace.lints.clippy]
# Turn on pedantic and then disable some of the pedantic lints
pedantic = { level = "warn", priority = -1 }
struct_excessive_bools = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
enum_glob_use = "allow"
wildcard_imports = "allow"
large_stack_arrays = "allow"  # it's buggy and reports on const arrays

# opinion differences with clippy
too_many_lines = "allow"
blocks_in_conditions = "allow"

# a selection of warnings from clippy's restricted set
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
integer_division = "warn"
lossy_float_literal = "warn"
mixed_read_write_in_expression = "warn"
mutex_atomic = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_add = "warn"
string_to_string = "warn"
todo = "warn"

[workspace.lints.rust]
missing_debug_implementations = "warn"
future_incompatible = { level = "warn", priority = -1 }
missing_copy_implementations = "warn"
noop_method_call = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"

[lints]
workspace = true
