[package]
name = "ck3-tiger"
version = "1.5.0"
edition = "2021"
license = "GPL-3.0-or-later"
default-run = "ck3-tiger"
description = "Validator that checks Crusader Kings 3 user mod files for mistakes and warns about them. For example: missing localizations, or using a faith trigger on a character. Crusader Kings 3 is a grand strategy game made by Paradox Interactive, and user mods are made by the players to enhance or change their game experience. This tool is for the people who make the mods."
homepage = "https://github.com/amtep/ck3-tiger"
repository = "https://github.com/amtep/ck3-tiger"
readme = "../README.md"
keywords = [ "ck3", "linter", "mods", "validator", "paradox" ]
categories = ["command-line-utilities", "development-tools", "game-development"]
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiger-lib = { path = "..", version = "1.5.0", features = ["ck3"] }
tiger-bin-shared = { path = "../tiger-bin-shared", version = "1.5.0", features = ["ck3"] }

anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0.104"
strum = "0.26.0"

[dev-dependencies]
serde = { version = "1.0.184", features = ["derive"] }
toml = "0.8.8"
criterion = "0.5"

[[bench]]
name = "criterion"
harness = false

[lints]
workspace = true
