[package]
name = "hoi4-tiger"
version = "1.8.0"
edition = "2021"
license = "GPL-3.0-or-later"
default-run = "hoi4-tiger"
description = "Validator that checks Hearts of Iron 4 user mod files for mistakes and warns about them. For example: missing localizations, or using a state trigger on a country. Hearts of Iron 4 is a grand strategy game made by Paradox Interactive, and user mods are made by the players to enhance or change their game experience. This tool is for the people who make the mods."
homepage = "https://github.com/amtep/tiger"
repository = "https://github.com/amtep/tiger"
readme = "../README.md"
keywords = ["hoi4", "hearts of iron", "linter", "mods", "validator"]
categories = ["command-line-utilities", "development-tools", "game-development"]
rust-version = "1.84"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiger-lib = { path = "..", version = "1.8.0", default-features = false, features = ["hoi4"] }
tiger-bin-shared = { path = "../tiger-bin-shared", version = "1.8.0", default-features = false, features = ["hoi4"] }

anyhow = "1"

[target.'cfg(windows)'.dependencies]
ansiterm = "0.12.2"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8.8"

[lints]
workspace = true
