[package]
name = "imperator-tiger"
version = "0.8.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiger-lib = { version = "0.8.5", path = "..", default-features = false, features = ["imperator"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
ansi_term = "0.12.1"
