[package]
name = "imperator-tiger"
version = "0.8.12"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiger-lib = { version = "0.8.12", path = "..", default-features = false, features = ["imperator"] }
anyhow = "1"
clap = { version = "~4.4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
ansiterm = "0.12.2"
