[package]
name = "imperator-tiger"
version = "1.9.0"
edition = "2021"
license = "GPL-3.0-or-later"
default-run = "imperator-tiger"
description = "Validator that checks Imperator: Rome user mod files for mistakes and warns about them. For example: missing localizations, or using a country trigger on a character. Imperator: Rome is a grand strategy game made by Paradox Interactive, and user mods are made by the players to enhance or change their game experience. This tool is for the people who make the mods."
homepage = "https://github.com/amtep/tiger"
repository = "https://github.com/amtep/tiger"
readme = "../README.md"
keywords = ["imperator", "rome", "mods", "validator", "paradox"]
categories = ["command-line-utilities", "development-tools", "game-development"]
rust-version = "1.84"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiger-bin-shared = { path = "../tiger-bin-shared", version = "1.9.0", default-features = false, features = [
    "imperator",
] }

anyhow = "1"

[lints]
workspace = true
