[package]
name = "tiger-bin-shared"
version = "1.6.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Shared binary library for ck3-tiger, vic3-tiger, and imperator-tiger."
homepage = "https://github.com/amtep/ck3-tiger"
repository = "https://github.com/amtep/ck3-tiger"
readme = "../README.md"
rust-version = "1.80"

[dependencies]
tiger-lib = { path = "..", version = "1.6.1", default-features = false }

anyhow = "1"
cfg-if = "1"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
# held back because of msrv
home = "=0.5.9"
regex = "1.10"
steamlocate = "2.0"
thiserror = "2.0"

litemap = "=0.7.4"
zerofrom = "=0.1.5"

[target.'cfg(windows)'.dependencies]
ansiterm = "0.12.2"

[features]
default = ["ck3"]
ck3 = ["tiger-lib/ck3"]
vic3 = ["tiger-lib/vic3"]
imperator = ["tiger-lib/imperator"]

[target.'cfg(target_os = "windows")'.dependencies]
self_update = { version = "0.42", features = [
    "archive-zip",
    "compression-zip-deflate",
] }

[target.'cfg(target_os = "linux")'.dependencies]
self_update = { version = "0.42", features = [
    "archive-tar",
    "compression-flate2",
] }

[lints]
workspace = true
