[package]
name = "utils"
version = "1.6.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Utilities for maintaining tiger-lib"
homepage = "https://github.com/amtep/ck3-tiger"
repository = "https://github.com/amtep/ck3-tiger"
readme = "../README.md"
rust-version = "1.84"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
strum_macros = "0.27"

[lints]
workspace = true
