[package]
name = "utils"
version = "1.7.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Utilities for maintaining tiger-lib"
homepage = "https://github.com/amtep/tiger"
repository = "https://github.com/amtep/tiger"
readme = "../README.md"
rust-version = "1.84"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
strum_macros = "0.27"

[lints]
workspace = true
