[package]
name = "vic3-tiger"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiger-lib = { path = "..", features = ["vic3"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
ansi_term = "0.12.1"
